# Fudan-CourseLens-Worker

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  worker-mirror-root.json  worker-mirror-trust.json  worker-mirror-trust.sig  worker-mirror.manifest.json  worker-mirror.manifest.sig
.github/workflows/: ci.yml  cloud-daily.yml  cloud-verify.yml  echo.yml  mirror-policy.yml  process.yml  publish-mirror.yml  synthetic-smoke.yml
courselens_worker/: __init__.py  asr.py  cloud_automation.py  formats.py  llm.py  mailbox.py  ocr.py  platform_session.py  protocol.py  runner.py  source.py
docs/technical/: README.md
scripts/: check_generated_mirror.py  check_markdown_links.py  check_public_boundary.py  check_text_encoding.py  install_models.py  synthetic_asr_smoke.py  synthetic_ocr_smoke.py
shared/: __init__.py
shared/protocol/: __init__.py  mirror.py  wire.py
tests/: test_asr.py  test_asr_diagnostics.py  test_cloud_automation.py  test_llm_checkpoints.py  test_platform_session.py  test_protocol.py  test_runner_echo.py  test_runner_progress.py  test_source.py  test_workflows.py
